# College-CS

./: .gitignore  README.md  testfile
CS-190/: README.md  Test.py
CS-191/: Notes-Lectures  README.md
CS-191/HW10/: CMakeLists.txt  Main.cpp
CS-191/HW11/: CMakeLists.txt  Main.cpp
CS-191/HW12/: CMakeLists.txt  Cat.h  Main.cpp
CS-191/HW13/: CMakeLists.txt  HW13.cpp  Rectangle.h  Square.h  UnitSquare.h
CS-191/HW14/: CMakeLists.txt  LinkedList.h  Main.cpp
CS-191/HW2/: Main.cpp
CS-191/HW3/: CMakeLists.txt  Main.cpp
CS-191/HW4/: CMakeLists.txt  Main.cpp
CS-191/HW5/: CMakeLists.txt  Main.cpp
CS-195/: 195_Exam3_PatrickRakowicz_CalebDomenico.sql  README.md
CS-235/: README.md
CS-250/: Notes  README.md
CS-280/: README.md
CS-303/: README.md
CS-310/: README.md
CS-310/Final_Project/: Cargo.toml
CS-310/Final_Project/src/: main.rs
CS-320/: README.md
CS-330/: HW1-BinDecHex.cpp  HW2-2sCompCalc.cpp  HW3LogicGateCirc.circ  HW3LogicGateCirc2.7.circ  HW3LogicGateCirc3.8.circ  README.md
CS-330/HW8-CacheSim/: CMakeLists.txt  cache_sim.c  mem_trace_long.txt  mem_trace_long_result_5bit_3way.txt  mem_trace_long_result_8bit_2way.txt  mem_trace_small.txt  mem_trace_small_result_4bit_3way.txt
CS-350/: README.md  ch01.php  ch07.php  ch08.php  htdocs
CS-365/: HW10.py  HW11.py  HW13.py  HW3.py  Lab10-p2.py  Lab10-wordCount.py  README.md  RedditConn.py  apacheSparkTest.py  example.txt  finalcount.txt  moveStats.csv  movie_ratings_dataset.csv  pythonConn.py
CS-370/: README.md
CS-412/: README.md
CS-435/: README.md
CS-470/: HW3-DivConcMas-P4.py  README.md
(+966 files in other folders)
